configured site routes

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Shafarik&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+:root {
+    --background: #ffffff;
+    --foreground: #171717;
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
+}
+
+body {
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Shafarik, Helvetica, sans-serif;
+}
